# geometric_support_tools

./: README.md
convex_decomposition/: CMakeLists.txt  README.md  package.xml
convex_decomposition/include/convex_decomposition/vhacd/: btAlignedAllocator.h  btAlignedObjectArray.h  btConvexHullComputer.h  btMinMax.h  btVector3.h  vhacdCircularList.h  vhacdICHull.h  vhacdManifoldMesh.h  vhacdMesh.h  vhacdVHACD.h  vhacdVector.h  vhacdVolume.h
convex_decomposition/src/: log.txt  mesh_convex_decomposition_node.cpp
convex_decomposition/src/vhacd/: VHACD.cpp  btAlignedAllocator.cpp  btConvexHullComputer.cpp  vhacdICHull.cpp  vhacdManifoldMesh.cpp  vhacdMesh.cpp  vhacdVolume.cpp
